--- a/Example/MovinViewsIn/Base.lproj/Main.storyboard
+++ b/Example/MovinViewsIn/Base.lproj/Main.storyboard
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="1aV-Uu-qui">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="8Je-pH-sFX">
+            <objects>
+                <navigationController navigationBarHidden="YES" id="1aV-Uu-qui" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="q2V-zd-hEJ">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="UkY-1v-sLh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="640-pO-8fC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-401" y="34"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
@@ -20,11 +35,84 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Awz-Bg-H17">
+                                <rect key="frame" x="20" y="263.5" width="335" height="140"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="140" id="WCk-7Z-r4O"/>
+                                </constraints>
+                                <state key="normal" image="surfer"/>
+                                <connections>
+                                    <segue destination="aT6-AA-Ud3" kind="presentation" identifier="Image Segue" id="Ftq-cC-dIq"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Awz-Bg-H17" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="O3r-Qo-MFO"/>
+                            <constraint firstItem="Awz-Bg-H17" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="QZw-eu-xDV"/>
+                            <constraint firstAttribute="trailing" secondItem="Awz-Bg-H17" secondAttribute="trailing" constant="20" id="bvl-Ne-Sr6"/>
+                            <constraint firstItem="Awz-Bg-H17" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="w5I-x1-YrG"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="QqA-HI-IpO"/>
+                    <connections>
+                        <outlet property="surferButton" destination="Awz-Bg-H17" id="bNw-nf-phk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="669.60000000000002" y="33.733133433283363"/>
+        </scene>
+        <!--Modal View Controller-->
+        <scene sceneID="vaj-iI-9ay">
+            <objects>
+                <viewController id="aT6-AA-Ud3" customClass="ModalViewController" customModule="MovinViewsIn_Example" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="suW-dv-TGz"/>
+                        <viewControllerLayoutGuide type="bottom" id="dPw-Mh-jy6"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4hI-OU-FEd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aby-wj-9L9">
+                                <rect key="frame" x="0.0" y="60" width="375" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="oWl-HB-yuf"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MYG-DF-rNX">
+                                <rect key="frame" x="10" y="20" width="50" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="C11-1t-h3N"/>
+                                    <constraint firstAttribute="width" constant="50" id="L0R-X5-qAh"/>
+                                </constraints>
+                                <state key="normal" title="Close"/>
+                                <connections>
+                                    <action selector="close:" destination="aT6-AA-Ud3" eventType="touchDragInside" id="tRK-tY-cmR"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="aby-wj-9L9" secondAttribute="trailing" id="E5Z-Lq-T26"/>
+                            <constraint firstItem="aby-wj-9L9" firstAttribute="leading" secondItem="4hI-OU-FEd" secondAttribute="leading" id="UjU-q5-Gqv"/>
+                            <constraint firstItem="MYG-DF-rNX" firstAttribute="leading" secondItem="4hI-OU-FEd" secondAttribute="leading" constant="10" id="gmu-nO-bff"/>
+                            <constraint firstItem="MYG-DF-rNX" firstAttribute="top" secondItem="suW-dv-TGz" secondAttribute="bottom" id="yRA-gy-hCW"/>
+                            <constraint firstItem="aby-wj-9L9" firstAttribute="top" secondItem="suW-dv-TGz" secondAttribute="bottom" constant="40" id="ziG-1w-1zY"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="heroImageView" destination="aby-wj-9L9" id="o0G-0i-TGl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t20-fH-En5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1599" y="34"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="surfer" width="220" height="140"/>
+    </resources>
 </document>
