--- a/Example/MovinViewsIn/Base.lproj/Main.storyboard
+++ b/Example/MovinViewsIn/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="1aV-Uu-qui">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -9,21 +9,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
-        <scene sceneID="8Je-pH-sFX">
-            <objects>
-                <navigationController navigationBarHidden="YES" id="1aV-Uu-qui" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="q2V-zd-hEJ">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="UkY-1v-sLh"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="640-pO-8fC" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-401" y="34"/>
-        </scene>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
@@ -33,11 +18,11 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Awz-Bg-H17">
-                                <rect key="frame" x="20" y="263.5" width="335" height="140"/>
+                                <rect key="frame" x="20" y="275.33333333333331" width="374" height="140"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="140" id="WCk-7Z-r4O"/>
                                 </constraints>
@@ -46,12 +31,32 @@
                                     <segue destination="aT6-AA-Ud3" kind="presentation" identifier="Image Segue" id="Ftq-cC-dIq"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bFf-mi-pc3">
+                                <rect key="frame" x="16" y="40.000000000000014" width="382" height="223.33333333333337"/>
+                                <string key="text">Lorem ipsum dolor amet vinyl literally taxidermy whatever direct trade. Iceland man braid swag intelligentsia mixtape, artisan scenester chartreuse cronut activated charcoal af typewriter. Mustache gochujang migas, jean shorts hoodie fam viral la croix small batch lyft beard. Vaporware fanny pack green juice wolf. Squid XOXO ramps enamel pin tote bag man bun cliche quinoa craft beer prism. Disrupt vice before they sold out, banjo copper mug vape gluten-free.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iWv-TB-zRg">
+                                <rect key="frame" x="16" y="427.33333333333337" width="382" height="284.33333333333337"/>
+                                <string key="text">Sriracha asymmetrical literally keytar. Yr sustainable paleo slow-carb ethical knausgaard drinking vinegar echo park cliche everyday carry sartorial snackwave butcher poutine. Flannel banjo austin activated charcoal lyft everyday carry. Fingerstache whatever mustache leggings put a bird on it hexagon, coloring book bespoke direct trade seitan af. Franzen 90's af, skateboard la croix narwhal distillery tilde scenester hexagon forage listicle butcher man bun edison bulb. Helvetica four dollar toast irony, fashion axe tumeric sartorial roof party. Typewriter stumptown twee everyday carry, flannel selvage artisan enamel pin wayfarers.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Awz-Bg-H17" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="O3r-Qo-MFO"/>
+                            <constraint firstItem="bFf-mi-pc3" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="40" id="8vI-hu-Ria"/>
+                            <constraint firstAttribute="trailing" secondItem="iWv-TB-zRg" secondAttribute="trailing" constant="16" id="ASc-Kv-1bq"/>
+                            <constraint firstItem="iWv-TB-zRg" firstAttribute="top" secondItem="Awz-Bg-H17" secondAttribute="bottom" constant="12" id="BGL-4g-2i4"/>
                             <constraint firstItem="Awz-Bg-H17" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="QZw-eu-xDV"/>
+                            <constraint firstAttribute="trailing" secondItem="bFf-mi-pc3" secondAttribute="trailing" constant="16" id="Zjr-ge-ofb"/>
                             <constraint firstAttribute="trailing" secondItem="Awz-Bg-H17" secondAttribute="trailing" constant="20" id="bvl-Ne-Sr6"/>
+                            <constraint firstItem="bFf-mi-pc3" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="fYB-U2-cIF"/>
+                            <constraint firstItem="Awz-Bg-H17" firstAttribute="top" secondItem="bFf-mi-pc3" secondAttribute="bottom" constant="12" id="lg2-nq-tfH"/>
+                            <constraint firstItem="iWv-TB-zRg" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="uid-nK-5mx"/>
                             <constraint firstItem="Awz-Bg-H17" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="w5I-x1-YrG"/>
                         </constraints>
                     </view>
@@ -73,11 +78,11 @@
                         <viewControllerLayoutGuide type="bottom" id="dPw-Mh-jy6"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="4hI-OU-FEd">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aby-wj-9L9">
-                                <rect key="frame" x="0.0" y="60" width="375" height="200"/>
+                                <rect key="frame" x="0.0" y="60" width="414" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="oWl-HB-yuf"/>
                                 </constraints>
