--- a/Example/MovinViewsIn/Base.lproj/Main.storyboard
+++ b/Example/MovinViewsIn/Base.lproj/Main.storyboard
@@ -1,15 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="MRS-ml-LIJ">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Puppies-->
+        <scene sceneID="OrJ-qG-FOp">
+            <objects>
+                <collectionViewController id="pmA-Qi-BHc" customClass="SecondViewController" customModule="MovinViewsIn_Example" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="oPZ-bZ-lat">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="eoV-he-P0e">
+                            <size key="itemSize" width="120" height="120"/>
+                            <size key="headerReferenceSize" width="0.0" height="200"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Thumbnail Cell" id="M15-ob-35l">
+                                <rect key="frame" x="0.0" y="200" width="120" height="120"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="lCw-P0-prl">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </collectionReusableView>
+                        <connections>
+                            <outlet property="dataSource" destination="pmA-Qi-BHc" id="pRM-4q-tiy"/>
+                            <outlet property="delegate" destination="pmA-Qi-BHc" id="Lgz-eH-Cdb"/>
+                        </connections>
+                    </collectionView>
+                    <tabBarItem key="tabBarItem" systemItem="contacts" id="ojc-U7-TdU"/>
+                    <navigationItem key="navigationItem" title="Puppies" id="4T3-HD-6pH"/>
+                    <connections>
+                        <segue destination="fjU-vk-zD9" kind="presentation" identifier="Thumbnail Segue" id="9d5-Lb-06Q"/>
+                    </connections>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e0X-YE-IrD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="699" y="602"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="DcL-hD-FvR">
+            <objects>
+                <tabBarController id="MRS-ml-LIJ" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="I7z-wH-XKU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="dzC-eJ-mTB" kind="relationship" relationship="viewControllers" id="InQ-xJ-KNN"/>
+                        <segue destination="mBf-xs-IZh" kind="relationship" relationship="viewControllers" id="fEn-RU-UbI"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Oz1-pI-Pzy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-943" y="-124"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Urk-i3-K6g">
+            <objects>
+                <navigationController id="dzC-eJ-mTB" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="9Sd-Ss-I1I"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SBC-3g-S00">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="Ohx-eS-lrK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YI0-LE-f5A" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-139" y="-125"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Rpf-e4-pfS">
+            <objects>
+                <navigationController id="mBf-xs-IZh" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="contacts" id="PVt-kN-IDx"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qg1-Mt-46I">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="pmA-Qi-BHc" kind="relationship" relationship="rootViewController" id="F5G-Nu-Pwg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fMh-Ih-dbT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-139" y="602"/>
+        </scene>
+        <!--Article-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="MovinViewsIn_Example" customModuleProvider="target" sceneMemberID="viewController">
@@ -22,7 +117,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Awz-Bg-H17">
-                                <rect key="frame" x="20" y="275.33333333333331" width="374" height="140"/>
+                                <rect key="frame" x="20" y="311.33333333333331" width="374" height="140"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="140" id="WCk-7Z-r4O"/>
                                 </constraints>
@@ -32,14 +127,14 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bFf-mi-pc3">
-                                <rect key="frame" x="16" y="40.000000000000014" width="382" height="223.33333333333337"/>
+                                <rect key="frame" x="16" y="76.000000000000014" width="382" height="223.33333333333337"/>
                                 <string key="text">Lorem ipsum dolor amet vinyl literally taxidermy whatever direct trade. Iceland man braid swag intelligentsia mixtape, artisan scenester chartreuse cronut activated charcoal af typewriter. Mustache gochujang migas, jean shorts hoodie fam viral la croix small batch lyft beard. Vaporware fanny pack green juice wolf. Squid XOXO ramps enamel pin tote bag man bun cliche quinoa craft beer prism. Disrupt vice before they sold out, banjo copper mug vape gluten-free.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iWv-TB-zRg">
-                                <rect key="frame" x="16" y="427.33333333333337" width="382" height="284.33333333333337"/>
+                                <rect key="frame" x="16" y="463.33333333333337" width="382" height="284.33333333333337"/>
                                 <string key="text">Sriracha asymmetrical literally keytar. Yr sustainable paleo slow-carb ethical knausgaard drinking vinegar echo park cliche everyday carry sartorial snackwave butcher poutine. Flannel banjo austin activated charcoal lyft everyday carry. Fingerstache whatever mustache leggings put a bird on it hexagon, coloring book bespoke direct trade seitan af. Franzen 90's af, skateboard la croix narwhal distillery tilde scenester hexagon forage listicle butcher man bun edison bulb. Helvetica four dollar toast irony, fashion axe tumeric sartorial roof party. Typewriter stumptown twee everyday carry, flannel selvage artisan enamel pin wayfarers.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -48,7 +143,7 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="bFf-mi-pc3" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="40" id="8vI-hu-Ria"/>
+                            <constraint firstItem="bFf-mi-pc3" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="12" id="8vI-hu-Ria"/>
                             <constraint firstAttribute="trailing" secondItem="iWv-TB-zRg" secondAttribute="trailing" constant="16" id="ASc-Kv-1bq"/>
                             <constraint firstItem="iWv-TB-zRg" firstAttribute="top" secondItem="Awz-Bg-H17" secondAttribute="bottom" constant="12" id="BGL-4g-2i4"/>
                             <constraint firstItem="Awz-Bg-H17" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="QZw-eu-xDV"/>
@@ -60,14 +155,15 @@
                             <constraint firstItem="Awz-Bg-H17" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="w5I-x1-YrG"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="QqA-HI-IpO"/>
+                    <tabBarItem key="tabBarItem" title="Item" id="dB5-TU-MF1"/>
+                    <navigationItem key="navigationItem" title="Article" id="p97-ZX-UR3"/>
                     <connections>
                         <outlet property="surferButton" destination="Awz-Bg-H17" id="bNw-nf-phk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="669.60000000000002" y="33.733133433283363"/>
+            <point key="canvasLocation" x="699" y="-125"/>
         </scene>
         <!--Modal View Controller-->
         <scene sceneID="vaj-iI-9ay">
@@ -114,10 +210,56 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t20-fH-En5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1599" y="34"/>
+            <point key="canvasLocation" x="1500" y="-125"/>
+        </scene>
+        <!--Modal View Controller-->
+        <scene sceneID="s3W-PV-gLa">
+            <objects>
+                <viewController extendedLayoutIncludesOpaqueBars="YES" id="fjU-vk-zD9" customClass="ModalViewController" customModule="MovinViewsIn_Example" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ou9-sC-I3c"/>
+                        <viewControllerLayoutGuide type="bottom" id="1Nl-MC-Wno"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="DPa-QI-6lI">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="A41-cx-TsJ">
+                                <rect key="frame" x="0.0" y="200" width="414" height="336"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Jm-wx-8E9">
+                                <rect key="frame" x="10" y="20" width="60" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="9d3-Mb-xUM"/>
+                                    <constraint firstAttribute="width" constant="60" id="oU1-Kj-q9y"/>
+                                </constraints>
+                                <state key="normal" title="Close"/>
+                                <connections>
+                                    <action selector="close:" destination="fjU-vk-zD9" eventType="touchUpInside" id="FBX-hX-NJU"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="A41-cx-TsJ" firstAttribute="centerY" secondItem="DPa-QI-6lI" secondAttribute="centerY" id="5Xl-m9-sQQ"/>
+                            <constraint firstItem="A41-cx-TsJ" firstAttribute="top" secondItem="DPa-QI-6lI" secondAttribute="top" constant="200" id="D5x-5f-Hyh"/>
+                            <constraint firstItem="A41-cx-TsJ" firstAttribute="leading" secondItem="DPa-QI-6lI" secondAttribute="leading" id="dJ6-ia-pxM"/>
+                            <constraint firstAttribute="bottom" secondItem="A41-cx-TsJ" secondAttribute="bottom" constant="200" id="hLU-K9-4iU"/>
+                            <constraint firstAttribute="trailing" secondItem="A41-cx-TsJ" secondAttribute="trailing" id="iQt-0E-Etw"/>
+                            <constraint firstItem="7Jm-wx-8E9" firstAttribute="top" secondItem="ou9-sC-I3c" secondAttribute="bottom" id="oQ0-0c-Ym0"/>
+                            <constraint firstItem="7Jm-wx-8E9" firstAttribute="leading" secondItem="DPa-QI-6lI" secondAttribute="leading" constant="10" id="uZ0-Sw-zgX"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="heroImageView" destination="A41-cx-TsJ" id="C2g-7w-CqH"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="exW-sF-EFT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1500" y="602"/>
         </scene>
     </scenes>
     <resources>
-        <image name="surfer" width="220" height="140"/>
+        <image name="surfer" width="440" height="280"/>
     </resources>
 </document>
