--- a/Example/MovinViewsIn/Base.lproj/Main.storyboard
+++ b/Example/MovinViewsIn/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="MRS-ml-LIJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="MRS-ml-LIJ">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -102,7 +102,7 @@
             </objects>
             <point key="canvasLocation" x="-139" y="602"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Puppy List-->
         <scene sceneID="Klo-Vf-46c">
             <objects>
                 <tableViewController id="deL-Rw-7BA" customClass="TableViewController" customModule="MovinViewsIn_Example" customModuleProvider="target" sceneMemberID="viewController">
@@ -139,7 +139,7 @@
                             <outlet property="delegate" destination="deL-Rw-7BA" id="abx-1t-S57"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="hn0-oC-4yU"/>
+                    <navigationItem key="navigationItem" title="Puppy List" id="hn0-oC-4yU"/>
                     <connections>
                         <segue destination="fjU-vk-zD9" kind="presentation" identifier="Puppy Detail Segue" id="OPq-Ls-vFL"/>
                     </connections>
