Use safe area layouts

--- a/Example/MovinViewsIn/Base.lproj/Main.storyboard
+++ b/Example/MovinViewsIn/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="MRS-ml-LIJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MRS-ml-LIJ">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -169,10 +170,6 @@
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ArticleViewController" customModule="MovinViewsIn_Example" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -204,17 +201,18 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="bFf-mi-pc3" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="12" id="8vI-hu-Ria"/>
-                            <constraint firstAttribute="trailing" secondItem="iWv-TB-zRg" secondAttribute="trailing" constant="16" id="ASc-Kv-1bq"/>
+                            <constraint firstItem="bFf-mi-pc3" firstAttribute="top" secondItem="MXc-Rv-861" secondAttribute="top" constant="12" id="8vI-hu-Ria"/>
+                            <constraint firstItem="MXc-Rv-861" firstAttribute="trailing" secondItem="iWv-TB-zRg" secondAttribute="trailing" constant="16" id="ASc-Kv-1bq"/>
                             <constraint firstItem="iWv-TB-zRg" firstAttribute="top" secondItem="Awz-Bg-H17" secondAttribute="bottom" constant="12" id="BGL-4g-2i4"/>
-                            <constraint firstItem="Awz-Bg-H17" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="QZw-eu-xDV"/>
-                            <constraint firstAttribute="trailing" secondItem="bFf-mi-pc3" secondAttribute="trailing" constant="16" id="Zjr-ge-ofb"/>
-                            <constraint firstAttribute="trailing" secondItem="Awz-Bg-H17" secondAttribute="trailing" constant="20" id="bvl-Ne-Sr6"/>
-                            <constraint firstItem="bFf-mi-pc3" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="fYB-U2-cIF"/>
+                            <constraint firstItem="Awz-Bg-H17" firstAttribute="leading" secondItem="MXc-Rv-861" secondAttribute="leading" constant="20" id="QZw-eu-xDV"/>
+                            <constraint firstItem="MXc-Rv-861" firstAttribute="trailing" secondItem="bFf-mi-pc3" secondAttribute="trailing" constant="16" id="Zjr-ge-ofb"/>
+                            <constraint firstItem="MXc-Rv-861" firstAttribute="trailing" secondItem="Awz-Bg-H17" secondAttribute="trailing" constant="20" id="bvl-Ne-Sr6"/>
+                            <constraint firstItem="bFf-mi-pc3" firstAttribute="leading" secondItem="MXc-Rv-861" secondAttribute="leading" constant="16" id="fYB-U2-cIF"/>
                             <constraint firstItem="Awz-Bg-H17" firstAttribute="top" secondItem="bFf-mi-pc3" secondAttribute="bottom" constant="12" id="lg2-nq-tfH"/>
-                            <constraint firstItem="iWv-TB-zRg" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="uid-nK-5mx"/>
-                            <constraint firstItem="Awz-Bg-H17" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="w5I-x1-YrG"/>
+                            <constraint firstItem="iWv-TB-zRg" firstAttribute="leading" secondItem="MXc-Rv-861" secondAttribute="leading" constant="16" id="uid-nK-5mx"/>
+                            <constraint firstItem="Awz-Bg-H17" firstAttribute="centerX" secondItem="MXc-Rv-861" secondAttribute="centerX" id="w5I-x1-YrG"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="MXc-Rv-861"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="dB5-TU-MF1"/>
                     <navigationItem key="navigationItem" title="Article" id="p97-ZX-UR3"/>
@@ -230,10 +228,6 @@
         <scene sceneID="vaj-iI-9ay">
             <objects>
                 <viewController id="aT6-AA-Ud3" customClass="ModalViewController" customModule="MovinViewsIn_Example" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="suW-dv-TGz"/>
-                        <viewControllerLayoutGuide type="bottom" id="dPw-Mh-jy6"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="4hI-OU-FEd">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -255,13 +249,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="aby-wj-9L9" secondAttribute="trailing" id="E5Z-Lq-T26"/>
-                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="MYG-DF-rNX" secondAttribute="trailing" constant="335" id="GNR-TF-5JB"/>
-                            <constraint firstItem="aby-wj-9L9" firstAttribute="leading" secondItem="4hI-OU-FEd" secondAttribute="leading" id="UjU-q5-Gqv"/>
-                            <constraint firstItem="MYG-DF-rNX" firstAttribute="leading" secondItem="4hI-OU-FEd" secondAttribute="leading" id="gmu-nO-bff"/>
-                            <constraint firstItem="MYG-DF-rNX" firstAttribute="top" secondItem="suW-dv-TGz" secondAttribute="bottom" id="yRA-gy-hCW"/>
-                            <constraint firstItem="aby-wj-9L9" firstAttribute="top" secondItem="suW-dv-TGz" secondAttribute="bottom" constant="40" id="ziG-1w-1zY"/>
+                            <constraint firstItem="aby-wj-9L9" firstAttribute="top" secondItem="Efe-4t-czc" secondAttribute="top" constant="40" id="4ze-3t-f1q"/>
+                            <constraint firstItem="Efe-4t-czc" firstAttribute="trailing" secondItem="aby-wj-9L9" secondAttribute="trailing" id="E5Z-Lq-T26"/>
+                            <constraint firstItem="Efe-4t-czc" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="MYG-DF-rNX" secondAttribute="trailing" constant="335" id="GNR-TF-5JB"/>
+                            <constraint firstItem="aby-wj-9L9" firstAttribute="leading" secondItem="Efe-4t-czc" secondAttribute="leading" id="UjU-q5-Gqv"/>
+                            <constraint firstItem="MYG-DF-rNX" firstAttribute="leading" secondItem="Efe-4t-czc" secondAttribute="leading" id="gmu-nO-bff"/>
+                            <constraint firstItem="MYG-DF-rNX" firstAttribute="top" secondItem="Efe-4t-czc" secondAttribute="top" id="yRA-gy-hCW"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="Efe-4t-czc"/>
                     </view>
                     <connections>
                         <outlet property="heroImageView" destination="aby-wj-9L9" id="o0G-0i-TGl"/>
@@ -275,16 +270,15 @@
         <scene sceneID="s3W-PV-gLa">
             <objects>
                 <viewController extendedLayoutIncludesOpaqueBars="YES" id="fjU-vk-zD9" customClass="ModalViewController" customModule="MovinViewsIn_Example" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="ou9-sC-I3c"/>
-                        <viewControllerLayoutGuide type="bottom" id="1Nl-MC-Wno"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="DPa-QI-6lI">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="A41-cx-TsJ">
                                 <rect key="frame" x="0.0" y="200" width="414" height="336"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="336" id="Rmw-Ko-Je9"/>
+                                </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Jm-wx-8E9">
                                 <rect key="frame" x="0.0" y="20" width="79" height="50"/>
@@ -297,15 +291,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="7Jm-wx-8E9" secondAttribute="trailing" constant="335" id="2UF-7o-QeP"/>
+                            <constraint firstItem="Rtw-If-UyE" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="7Jm-wx-8E9" secondAttribute="trailing" constant="335" id="2UF-7o-QeP"/>
                             <constraint firstItem="A41-cx-TsJ" firstAttribute="centerY" secondItem="DPa-QI-6lI" secondAttribute="centerY" id="5Xl-m9-sQQ"/>
-                            <constraint firstItem="A41-cx-TsJ" firstAttribute="top" secondItem="DPa-QI-6lI" secondAttribute="top" constant="200" id="D5x-5f-Hyh"/>
-                            <constraint firstItem="A41-cx-TsJ" firstAttribute="leading" secondItem="DPa-QI-6lI" secondAttribute="leading" id="dJ6-ia-pxM"/>
-                            <constraint firstAttribute="bottom" secondItem="A41-cx-TsJ" secondAttribute="bottom" constant="200" id="hLU-K9-4iU"/>
-                            <constraint firstAttribute="trailing" secondItem="A41-cx-TsJ" secondAttribute="trailing" id="iQt-0E-Etw"/>
-                            <constraint firstItem="7Jm-wx-8E9" firstAttribute="top" secondItem="ou9-sC-I3c" secondAttribute="bottom" id="oQ0-0c-Ym0"/>
-                            <constraint firstItem="7Jm-wx-8E9" firstAttribute="leading" secondItem="DPa-QI-6lI" secondAttribute="leading" id="uZ0-Sw-zgX"/>
+                            <constraint firstItem="A41-cx-TsJ" firstAttribute="leading" secondItem="Rtw-If-UyE" secondAttribute="leading" id="dJ6-ia-pxM"/>
+                            <constraint firstItem="Rtw-If-UyE" firstAttribute="trailing" secondItem="A41-cx-TsJ" secondAttribute="trailing" id="iQt-0E-Etw"/>
+                            <constraint firstItem="7Jm-wx-8E9" firstAttribute="top" secondItem="Rtw-If-UyE" secondAttribute="top" id="oQ0-0c-Ym0"/>
+                            <constraint firstItem="7Jm-wx-8E9" firstAttribute="leading" secondItem="Rtw-If-UyE" secondAttribute="leading" id="uZ0-Sw-zgX"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="Rtw-If-UyE"/>
                     </view>
                     <connections>
                         <outlet property="heroImageView" destination="A41-cx-TsJ" id="C2g-7w-CqH"/>
